k8smanifests/2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 2048-game
  template:
    metadata:
      labels:
        app: 2048-game
    spec:
      containers:
        - name: 2048-game
          image: alexwhen/docker-2048
          ports:
            - containerPort: 5858
---
apiVersion: v1
kind: Service
metadata:
  name: 2048-service
spec:
  selector:
    app: 2048-game
  ports:
    - protocol: TCP
      port: 5858
      targetPort: 5858
