k8smanifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
spec:
  rules:
    - host: nishant-2048.upes-int-devops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 80
  ingressClassName: nginx
